# recipe-manager

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  PRD-v3.md  README.md  docker-compose.yml  main.py  pyproject.toml
.taskmaster/: state.json
.taskmaster/docs/: photo-feature-prd.txt  prd-translate-endpoint.txt  prd.txt  v2-simplification-prd.txt
.taskmaster/tasks/: tasks.json
api/: filesystem.py  formatting.py  openai_client.py  recipes.py  routes.py  translation.py
recipes/: aaa.md  bbb.md  bon.md  chocolate-chip-cookies.md  sss.md  test-recipe-1.md  test-recipe-10.md  test-recipe-11.md  test-recipe-12.md  test-recipe-13.md  test-recipe-14.md  test-recipe-15.md  test-recipe-2.md  test-recipe-3.md  test-recipe-4.md  test-recipe-5.md  test-recipe-6.md  test-recipe-7.md  test-recipe-8.md  test-recipe-9.md  test-recipe.md  test.md
static/: api.js  app.js  codemirror-editor.js  easymde-editor.js  editor.html  editor.js  file-tree.js  index.html  markdown-editor.js  photo-manager.js  search.js  sidebar-manager.js  simple-editor.js  styles.css  touch-gestures.js  unified-app.js  utils.js
templates/: index.html
tests/: conftest.py.tmp.7260.1764020891524  test_api.py  test_photo_api.py  test_photo_filesystem.py  test_recipes.py  test_translation.py  test_translation_endpoint.py  test_utils.py  test_version_conflict.py
